--- a/src/components/ColorKeyboard/index.css
+++ b/src/components/ColorKeyboard/index.css
@@ -20,13 +20,11 @@
   box-sizing: border-box;
   color: #000000;
   cursor: pointer;
-  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 1em;
   font-weight: bold;
   line-height: 1.25;
   margin: 0;
   min-height: 3rem;
-  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
   position: relative;
   text-decoration: none;
   transition: all 250ms;
