--- a/src/components/Inputs/index.css
+++ b/src/components/Inputs/index.css
@@ -7,7 +7,6 @@
 
 .input-row {
   display: flex;
-  flex-wrap: wrap;
   gap: 10px;
 }
 
