--- a/src/components/Modals/index.css
+++ b/src/components/Modals/index.css
@@ -4,3 +4,9 @@
   gap: 10px;
   margin-top: 20px;
 }
+
+.modal-container {
+  max-height: 80vh;
+  max-width: 80vh;
+  overflow: auto;
+}
